# PlayingWithSundials

./: .gitignore  CMakeLists.txt  ThingsTriedForSA.key
examples/cvode/serial/: cvDirectDemo_ls.c
examples/cvodes/serial/: cvsAdvDiff_FSA_non.c  cvsRoberts_FSA_dns.c
install-mac/examples/arkode/C_manyvector/: CMakeLists.txt  Makefile
install-mac/examples/arkode/C_serial/: CMakeLists.txt  Makefile
install-mac/examples/cvode/serial/: CMakeLists.txt  Makefile
install-mac/examples/cvodes/serial/: CMakeLists.txt  Makefile  example1.c
install-mac/examples/ida/serial/: CMakeLists.txt  Makefile
install-mac/examples/idas/serial/: CMakeLists.txt  Makefile
install-mac/examples/kinsol/serial/: CMakeLists.txt  Makefile
install-mac/examples/nvector/manyvector/: Makefile  (+1 more)
install-mac/lib/: libsundials_arkode.4.7.0.dylib  libsundials_cvode.5.7.0.dylib  libsundials_cvodes.5.7.0.dylib  libsundials_generic.5.7.0.dylib  libsundials_ida.5.7.0.dylib  libsundials_idas.4.7.0.dylib  libsundials_kinsol.5.7.0.dylib  libsundials_nvecmanyvector.5.7.0.dylib  libsundials_nvecserial.5.7.0.dylib  libsundials_sunlinsolband.3.7.0.dylib  libsundials_sunlinsoldense.3.7.0.dylib  libsundials_sunlinsolpcg.3.7.0.dylib  libsundials_sunlinsolspbcgs.3.7.0.dylib  libsundials_sunlinsolspfgmr.3.7.0.dylib  libsundials_sunlinsolspgmr.3.7.0.dylib  libsundials_sunlinsolsptfqmr.3.7.0.dylib  libsundials_sunmatrixband.3.7.0.dylib  libsundials_sunmatrixdense.3.7.0.dylib  libsundials_sunmatrixsparse.3.7.0.dylib  libsundials_sunnonlinsolfixedpoint.2.7.0.dylib  libsundials_sunnonlinsolnewton.2.7.0.dylib
install-mac/mine/: CMakeLists.txt  ReplaceEqnInCvsRoberts_FSA_dns_cw.c  SimpleFluxFSAWithFDATake2.c  SimpleFluxFSAWithFiniteDifferenceApprox.c  SimpleFluxFSAWithUserSuppliedFunctions.c  VenkatramanAdjointWithFiniteDifferenceApprox.c  VenkatramanFSAWithFiniteDifferenceApprox.c  cvsRoberts_FSA_dns_cw.c  helpers.h  take2.c
src/cvodes/: cvodes.c
(+27 files in other folders)
